--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.share.NotificationsFragment">
+    tools:context=".ui.deleterecord.NotificationsFragment">
 
-    <TextView
-        android:id="@+id/text_notifications"
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:hint="Enter Register Mobile No."
+        android:id="@+id/et_mobile"
+        app:layout_constraintTop_toTopOf="parent"></EditText>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete Record"
+        android:id="@+id/btn_delete"
+        app:layout_constraintTop_toBottomOf="@+id/et_mobile"></Button>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
