--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,26 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.trishasofttech.bottomnavigationbar.ui.home.HomeFragment"
+        android:name="com.trishasofttech.bottomnavigationbar.ui.addshowrecord.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.trishasofttech.bottomnavigationbar.ui.dashboard.DashboardFragment"
+        android:name="com.trishasofttech.bottomnavigationbar.ui.updaterecord.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.trishasofttech.bottomnavigationbar.ui.share.NotificationsFragment"
+        android:name="com.trishasofttech.bottomnavigationbar.ui.deleterecord.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+
+    <fragment
+        android:id="@+id/navigation_search"
+        android:name="com.trishasofttech.bottomnavigationbar.ui.searchrecord.SearchFragment"
+        android:label="Search"
+        tools:layout="@layout/fragment_search" />
+
 </navigation>
