--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -20,4 +20,9 @@
         android:id="@+id/navigation_search"
         android:icon="@drawable/ic_search"
         android:title="Search" />
+
+    <item
+        android:id="@+id/navigation_searchbetween"
+        android:icon="@drawable/ic_search"
+        android:title="Sebet" />
 </menu>
